Fix overlay readability on dark images

--- a/index.css
+++ b/index.css
@@ -85,6 +85,10 @@ body {
   opacity: 1;
 }
 
+.overlay.light {
+  color: rgb(235, 235, 235);
+}
+
 @media only screen and (max-width: 1100px) {
   .project-grid {
     grid-template-areas:
@@ -109,5 +113,8 @@ body {
       'cup cup'
       'foam foam'
       'dimensional dimensional';
+  }
+  .project .overlay {
+    font-size: 24px;
   }
 }
